# SFML_Example

./: .gitignore  CMakeLists.txt  Controller.h  ParticleSystem.h  Player.cpp  Player.h  README.md  SFML.cpp  TileMap.cpp
include/: IObject.h  Player.h  TileMap.h
src/: CMakeLists.txt  ParticleSystem.cpp  Player.cpp  SFML_main.cpp
